--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@types/bcrypt": "^5.0.2",
     "@types/cors": "^2.8.19",
     "@types/express": "^5.0.3",
+    "@types/jsonwebtoken": "^9.0.10",
     "@types/node": "^24.0.3",
     "prisma": "^6.9.0",
     "tsx": "^4.20.3",
@@ -25,6 +26,7 @@
     "cors": "^2.8.5",
     "express": "^5.1.0",
     "http-status": "^2.1.0",
+    "jsonwebtoken": "^9.0.2",
     "ts-node-dev": "^2.0.0",
     "zod": "^3.25.67"
   }
