--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@types/cors": "^2.8.19",
     "@types/express": "^5.0.3",
     "@types/jsonwebtoken": "^9.0.10",
+    "@types/multer": "^2.0.0",
     "@types/node": "^24.0.3",
     "@types/nodemailer": "^6.4.17",
     "prisma": "^6.9.0",
@@ -25,12 +26,14 @@
     "@prisma/client": "^6.10.0",
     "@types/cookie-parser": "^1.4.9",
     "bcrypt": "^6.0.0",
+    "cloudinary": "^2.7.0",
     "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
     "dotenv": "^17.0.0",
     "express": "^5.1.0",
     "http-status": "^2.1.0",
     "jsonwebtoken": "^9.0.2",
+    "multer": "^2.0.1",
     "nodemailer": "^7.0.4",
     "ts-node-dev": "^2.0.0",
     "zod": "^3.25.67"
